bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `SevenMod8: TotalSizeIsMultipleOfEightBits` is not satisfied
  --> $DIR/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `TotalSizeIsMultipleOfEightBits` is not implemented for `SevenMod8`
   |
note: required by a bound in `Check`
  --> $DIR/checks.rs:48:21
   |
48 | pub struct Check<T: TotalSizeIsMultipleOfEightBits> {
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Check`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
